ヘッダー実装：PC版

--- a/_includes/snippet-firstview-item.liquid
+++ b/_includes/snippet-firstview-item.liquid
@@ -3,7 +3,7 @@
     <img src="/assets/img/mv_treeislight.jpg" alt="" width="2000">
     <figcaption>書籍表紙装画：<a href="https://twitter.com/sunamerius" target="_blank" rel="noopenner noreferrer">佐野裕一さん</a></figcaption>
   </figure>
-  <div class="home__firstview-image__txt font-serif-jp">
+  <div class="home__firstview-image__txt font-serif-jp page-width">
     <p>夜が明けると、村に人間は一人もいなかった。少年は、昨日まで人間だった蛾や蝙蝠や蛙の群れを引き連れて、森の奥へ帰っていった。彼らを近くの水辺に放し、昨日まで人間だった様々な種は、すべて母の根元に蒔いた。やがて、その一帯は花が咲き乱れ、蜜に誘われた鳥や獣の歌声で、いつまでも賑わうようになったという。</p>
     <div class="home__firstview-morelink">
       <a href="/book/trees_light/">『すべての樹木は光』<span>詳細ページへ</span></a>
@@ -15,7 +15,7 @@
     <img src="/assets/img/mv_dream_pc.jpg" srcset="/assets/img/mv_dream_sp.jpg 767w, /assets/img/mv_dream_pc.jpg 1280w" sizes="(max-width: 767px) 250px, 100vw" alt="" width="2000">
     <figcaption>書籍表紙装画：<a href="https://rimmsrims.webnode.jp/" target="_blank" rel="noopenner noreferrer">ほがり仰夜さん</a></figcaption>
   </figure>
-  <div class="home__firstview-image__txt font-serif-jp">
+  <div class="home__firstview-image__txt font-serif-jp page-width">
     <p>何故そんなことを気にしたのか、夢の中のわたしは知らない。分からない。気づきもしない。口元を見せて笑いあう、お客たちの誰に聞いても答えは返ってこないだろう。<br>これは唯の夢、現実から遠く離れ、——すべてが自由であるはずの国。</p>
     <div class="home__firstview-morelink">
       <a href="/book/dream/">『彼らは唯の夢』<span>詳細ページへ</span></a>
@@ -27,7 +27,7 @@
     <img src="/assets/img/mv_vacation.jpg" srcset="/assets/img/mv_vacation_sp.jpg 767w, /assets/img/mv_vacation.jpg 1280w" sizes="(max-width: 767px) 250px, 100vw" alt="" width="2000">
     <figcaption>表紙写真撮影：風野湊</figcaption>
   </figure>
-  <div class="home__firstview-image__txt font-serif-jp">
+  <div class="home__firstview-image__txt font-serif-jp page-width">
     <p>枯れ葉に覆われた林床の小道は先へ進むほどに細くなり、曲がりくねり、薄暗くなっていった。日光を奪いあうように樹木たちは巨大化し、はるか頭上の樹冠からこぼれる千々の光は無数の銀河を抱く虚空のようにも見えた。足元から樹冠へ至るまでの長大な距離にあらゆる緑が氾濫している。</p>
     <div class="home__firstview-morelink">
       <a href="/book/postcard_6/">「樹木のバカンス」<span>詳細ページへ</span></a>
@@ -35,11 +35,11 @@
   </div>
 </div>
 <div class="home__firstview-bg home__firstview-item hidden">
-  <figure class="home__firstview-image for-dream">
+  <figure class="home__firstview-image for-novelmber">
     <img src="/assets/img/mv_vacation.jpg" srcset="/assets/img/mv_november_sp.jpg 767w, /assets/img/mv_november_pc.jpg 1280w" sizes="(max-width: 767px) 250px, 100vw" alt="" width="2000">
     <figcaption>書籍表紙写真：<a href="https://unsplash.com/@evieshaffer?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noopenner noreferrer">Evie S.</a> on <a href="https://unsplash.com/photos/pink-and-blue-silver-dollar-eucalyptus-leaves-on-white-surface-vz3IQy0LOaA?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash" target="_blank" rel="noopenner noreferrer">Unsplash</a></figcaption>
   </figure>
-  <div class="home__firstview-image__txt font-serif-jp">
+  <div class="home__firstview-image__txt font-serif-jp page-width">
     <p>人間は扉が好きだ。扉の向こうに物語を夢見る。輝かしい夏への扉、魔法の国に通じる衣装箪笥の扉、扉の先にあるかもしれない、此処とは異なるどこかの世界。そんなものは存在しないと分かっていても、夢を見ずにはいられない——<br>いいや、違う、そんなものは存在しないと分かっているから、安心して物語を託せるのだ。</p>
     <div class="home__firstview-morelink">
       <a href="/book/november/">『十一月の春の庭』<span>詳細ページへ</span></a>
