--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -296,12 +296,15 @@ blockquote {
 body {
 	&.homePage {
 		.header {
-			display: none;
+			box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
 		}
 	}
 	&:not(.homePage) {
+		.header {
+			//border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.3);
+		}
 		.main {
-			padding-top: 6rem;
+			padding-top: 12rem;
 		}
 	}
 }
@@ -310,14 +313,18 @@ body {
 	position: absolute;
 	top: 0;
 	left: 0;
-	//background-color: rgba($color: $bgColor, $alpha: 0.8);
-	z-index: 10;
+	background-color: rgba($color: $bgColor, $alpha: 0.75);
+	z-index: 20;
 	width: 100%;
-	height: 6rem;
+	height: 6.5rem;
 	@include flex;
 	align-items: center;
 	//border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.3);
-	//box-shadow: 0 0 4rem rgba($color: #48423b, $alpha: 0.1);
+	transition: all 0.4s ease-in-out;
+	&:hover {
+		background-color: $bgColor;
+	}
+
 	.logo__image {
 		width: 12rem;
 		height: auto;
@@ -327,13 +334,65 @@ body {
 	}
 	&__inner {
 		width: 100%;
+		height: 100%;
 		@include flex;
-		justify-content: flex-end;
 		align-items: center;
 	}
-	&__menu {
-		a {
+	&__nav {
+		margin-left: 2.5rem;
+		height: 100%;
+		&-list {
+			@include flex(wrap);
+			font-size: 1.6rem;
+			height: 100%;
+			@media (max-width: $sp-width) {
+				font-size: 1.6rem;
+			}	
+			.hasmenu {
+				position: relative;
+				&:hover {
+					.header__nav-sublist {
+						height: 120px;
+						border: 1px solid rgba($color: #48423b, $alpha: 0.2);
+						border-top: none;
+					}
+				}
+			}
+		}
+		&-sublist {
+			position: absolute;
+			width: 100%;
+			height: 0px;
+			overflow: hidden;
+			background-color: $bgColor;
+			//box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
+			transition: height 0.4s ease;
+			font-size: 0.9em;
+			a {
+				display: block;
+				width: 100%;
+				height: 40px;
+				border-bottom: none;
+				padding: 7px 15px;
+			}
+		}
+		.menu-item--parent {
+			@include flexCentering;
+			height: 100%;
 			border-bottom: none;
+			padding: 0 15px;
+			cursor: pointer;
+			transition: all 0.4s ease;
+			&:hover {
+				background-color: rgba($color: $keyColor, $alpha: 0.2);
+			}
+		}
+		span {
+			font-size: 0.7em;
+			padding-top: 2px;
+			padding-left: 5px;
+			line-height: 1;
+			opacity: 0.7;
 		}
 	}
 }
@@ -796,9 +855,9 @@ body {
 			position: absolute;
 			bottom: 2rem;
 			//left: 2rem;
-			left: max(4rem, calc((100% - 128rem + 8rem) / 2));
+			right: max(4rem, calc((100% - 128rem + 8rem) / 2));
 			color: $bgColor;
-			z-index: 6;
+			z-index: 11;
 			opacity: 0.7;
 			font-size: 1.2rem;
 			text-shadow: 0 0 0.15em #00000011, 0 0 0.5em #00000066;
@@ -832,16 +891,27 @@ body {
 				opacity: 1;
 			}
 		}
-		&.for-dream::before {
+		&.for-dream {
+			&::before {
+				opacity: 0.5;
+				background: transparent linear-gradient(180deg, #48423b33 0%, #48423b00 0%, #48423b 100%) 0% 0% no-repeat padding-box;
+			}
+			img {
+				object-position: center;
+			}
+		}
+		&.for-novelmber::before {
 			opacity: 0.5;
 			background: transparent linear-gradient(180deg, #48423b33 0%, #48423b00 0%, #48423b 100%) 0% 0% no-repeat padding-box;
 		}
 		&__txt {
 			position: relative;
-			margin: 4rem 4rem 0 auto;
-			margin-right: max(4rem, calc((100% - 128rem + 8rem) / 2));
-			padding-bottom: 4rem;
-			max-width: 42rem;
+			//margin: 4rem 4rem 0 auto;
+			//margin-right: max(4rem, calc((100% - 128rem + 8rem) / 2));
+			//margin-left: max(4rem, calc((100% - 128rem + 8rem) / 2));
+			//padding-bottom: 4rem;
+			//max-width: 42rem;
+			padding: 4rem 4rem 4rem 8rem;
 			color: $bgColor;
 			z-index: 10;
 			font-size: 1.5rem;
@@ -852,8 +922,12 @@ body {
 				//width: calc(100vw - (4.266vw * 2));
 				width: calc(100vw - (1.5em * 2));
 			}
+			p {
+				max-width: 50rem;
+			}
 			.home__firstview-morelink {
 				text-align: right;
+				padding-bottom: 0.5rem;
 				@media (max-width: $sp-width) {
 					text-align: left;
 				}
@@ -893,6 +967,7 @@ body {
 	}
 	&__news {
 		padding-right: 19rem;
+		font-size: 1.3rem;
 		@media (max-width: $sp-width) {
 			padding-right: 0;
 		}
@@ -905,9 +980,6 @@ body {
 			padding: 0 0.3em;
 		}
 		&-body {
-			@include flex;
-			align-items: center;
-			font-size: 1.3rem;
 			@media (max-width: $sp-width) {
 				display: block;
 				font-size: 1.25rem;
