ヘッダー改修

--- a/assets/scss/core/_utility.scss
+++ b/assets/scss/core/_utility.scss
@@ -1,5 +1,6 @@
 // Utility
 $sp-width: 767px;
+$pc-width: 768px;
 $textColor: #181614; //#231916;
 $bgColor: #fefbf9;
 $keyColor: #37807a; //37807a 49aaa3 //#55acee
