--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -305,6 +305,9 @@ body {
 		}
 		.main {
 			padding-top: 12rem;
+			@media (max-width: $sp-width) {
+				padding-top: 5rem;
+			}
 		}
 	}
 }
@@ -321,15 +324,18 @@ body {
 	align-items: center;
 	//border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.3);
 	transition: all 0.4s ease-in-out;
+	@media (max-width: $sp-width) {
+		height: 5rem;
+		background-color: rgba($color: $bgColor, $alpha: 0.85);
+	}
 	&:hover {
 		background-color: $bgColor;
 	}
-
 	.logo__image {
 		width: 12rem;
 		height: auto;
 		@media (max-width: $sp-width) {
-			width: 10rem;
+			width: 8rem;
 		}
 	}
 	&__inner {
@@ -337,43 +343,133 @@ body {
 		height: 100%;
 		@include flex;
 		align-items: center;
+		@media (max-width: $sp-width) {
+			//justify-content: flex-end;
+		}
+	}
+	.mobile__nav-btn {
+		display: none;
+		@media (max-width: $sp-width) {
+			display: block;
+			position: absolute;
+			top: 0.5rem;
+			right: 1.2rem;
+			border: none;
+			background: transparent;
+			box-shadow: none;
+			padding: 1rem;
+			z-index: 31;
+			span {
+				font-size: 1rem;
+				line-height: 1;
+				display: block;
+				color: $keyColor;
+				transition: transform 0.4s ease;
+				&.btn__line {
+					height: 1px;
+					background-color: rgba($color: $keyColor, $alpha: 0.5);
+					margin-bottom: 0.3rem;
+					&:nth-child(2) {
+						width: 1.8rem;
+					}
+				}
+			}
+			&.open {
+				position: fixed;
+				.btn__line {
+					width: 2rem;
+					&:nth-child(1) {
+						transform: rotate(45deg);
+						transform-origin: left;
+					}
+					&:nth-child(2) {
+						display: none;
+					}
+					&:nth-child(3) {
+						transform: rotate(-45deg);
+						transform-origin: 12px 6px;
+					}
+				}
+				.btn__text {
+					display: none;
+				}
+			}
+		}
 	}
 	&__nav {
 		margin-left: 2.5rem;
 		height: 100%;
+		@media (max-width: $sp-width) {
+			position: fixed;
+			margin: 0;
+			width: calc(100dvw - 12rem);
+			height: 100dvh;
+			background-color: rgba($color: $bgColor, $alpha: 0.95);
+			z-index: 30;
+			top: 0;
+			right: -100dvw;
+			transition: all 0.5s ease-in-out;
+			.open + & {
+				right: 0;
+				box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
+			}
+		}	
 		&-list {
 			@include flex(wrap);
 			font-size: 1.6rem;
 			height: 100%;
 			@media (max-width: $sp-width) {
-				font-size: 1.6rem;
-			}	
+				display: block;
+				padding-top: 5rem;
+			}
 			.hasmenu {
 				position: relative;
 				&:hover {
-					.header__nav-sublist {
-						height: 120px;
-						border: 1px solid rgba($color: #48423b, $alpha: 0.2);
-						border-top: none;
+					@media (min-width: $pc-width) {
+						.header__nav-sublist {
+							height: 120px;
+							border: 1px solid rgba($color: #48423b, $alpha: 0.2);
+							border-top: none;
+						}
+					}
+				}
+				@media (max-width: $sp-width) {
+					margin-bottom: 2rem;
+					&::after {
+						display: block;
+						content: "";
+						width: calc(100% - 6rem);
+						height: 1px;
+						background-color: rgba($color: $textColor, $alpha: 0.2);
+						position: absolute;
+						left: 3rem;
+						bottom: -1.2rem;
 					}
 				}
 			}
 		}
 		&-sublist {
-			position: absolute;
-			width: 100%;
-			height: 0px;
-			overflow: hidden;
-			background-color: $bgColor;
-			//box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
-			transition: height 0.4s ease;
 			font-size: 0.9em;
+			@media (min-width: $pc-width) {
+				position: absolute;
+				width: 100%;
+				height: 0px;
+				overflow: hidden;
+				background-color: $bgColor;
+				transition: height 0.4s ease;	
+			}
 			a {
 				display: block;
 				width: 100%;
 				height: 40px;
 				border-bottom: none;
-				padding: 7px 15px;
+				padding: 0.7rem 1.5rem;
+				@media (max-width: $sp-width) {
+					display: block;
+					height: auto;
+					padding: 0.5rem calc(3rem + 1em);
+					margin-top: -0.5rem;
+				}
 			}
 		}
 		.menu-item--parent {
@@ -386,13 +482,17 @@ body {
 			&:hover {
 				background-color: rgba($color: $keyColor, $alpha: 0.2);
 			}
+			@media (max-width: $sp-width) {
+				display: block;
+				padding: 0.8rem 3rem;
+			}
 		}
 		span {
 			font-size: 0.7em;
 			padding-top: 2px;
 			padding-left: 5px;
 			line-height: 1;
-			opacity: 0.7;
+			color: rgba($color: $textColor, $alpha: 0.7);
 		}
 	}
 }
@@ -679,6 +779,7 @@ body {
 			padding-right: 2rem;
 			border-right: 1px solid rgba($color: $keyColor, $alpha: 0.2);	
 			@media (max-width: $sp-width) {
+				width: 100%;
 				margin-right: 0;
 				padding-right: 0;
 				border-right: none;
@@ -796,7 +897,7 @@ body {
 		flex-direction: column;
 		justify-content: flex-end;
 		@media (max-width: $sp-width) {
-			padding-top: 4rem;
+			padding-top: 8rem;
 		}
 	}
 	&__firstview-txt {
@@ -809,7 +910,7 @@ body {
 			position: relative;
 		}
 		@media (max-width: $sp-width) {
-			padding: 4rem 0 12rem;
+			padding: 4rem 0;
 		}
 		.home__header {
 			position: absolute;
@@ -898,11 +999,21 @@ body {
 			}
 			img {
 				object-position: center;
+				@media (max-width: $sp-width) {
+				object-position: center bottom;
+				}
 			}
 		}
-		&.for-novelmber::before {
-			opacity: 0.5;
-			background: transparent linear-gradient(180deg, #48423b33 0%, #48423b00 0%, #48423b 100%) 0% 0% no-repeat padding-box;
+		&.for-novelmber {
+			&::before {
+				opacity: 0.5;
+				background: transparent linear-gradient(180deg, #48423b33 0%, #48423b00 0%, #48423b 100%) 0% 0% no-repeat padding-box;
+			}
+			@media (max-width: $sp-width) {
+				img {
+					object-position: center bottom;
+				}
+			}
 		}
 		&__txt {
 			position: relative;
@@ -917,7 +1028,7 @@ body {
 			font-size: 1.5rem;
 			text-shadow: 0 0 0.15em #00000011, 0 0 0.5em #00000066;
 			@media (max-width: $sp-width) {
-				margin: 3rem auto 0;
+				padding: 0;
 				padding-bottom: calc(4rem + 1.5em);
 				//width: calc(100vw - (4.266vw * 2));
 				width: calc(100vw - (1.5em * 2));
@@ -966,10 +1077,12 @@ body {
 		}
 	}
 	&__news {
-		padding-right: 19rem;
+		display: inline-block;
+		padding: 2rem;
+		border: 1px solid rgba($color: $keyColor, $alpha: 0.3);
 		font-size: 1.3rem;
 		@media (max-width: $sp-width) {
-			padding-right: 0;
+			padding: 1rem 1.5rem;
 		}
 		& + .home__news {
 			margin-top: 2rem;
@@ -980,8 +1093,9 @@ body {
 			padding: 0 0.3em;
 		}
 		&-body {
+			display: grid;
+			grid-template-columns: max-content 1fr;
 			@media (max-width: $sp-width) {
-				display: block;
 				font-size: 1.25rem;
 			}
 			dt {
@@ -1256,8 +1370,8 @@ body {
 .novel {
 	max-width: 38em;
 	//margin: 0 auto;
-	margin-left: 8rem;
-	//margin-left: max(3rem, calc((100% - 128rem + 8rem) / 2));
+	//margin-left: 8rem;
+	margin-left: max(8rem, calc((100% - 128rem + 8rem) / 2));
 	font-size: 1.6rem;
 	line-height: 1.8;
 	overflow-wrap: break-word;
