--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -408,7 +408,7 @@ body {
 			z-index: 30;
 			top: 0;
 			right: -100dvw;
-			transition: all 0.5s ease-in-out;
+			transition: right 0.5s ease-in-out;
 			.open + & {
 				right: 0;
 				box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
