--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -403,7 +403,7 @@ body {
 			position: fixed;
 			margin: 0;
 			width: calc(100dvw - 12rem);
-			height: 100lvh;
+			height: 100%;
 			background-color: rgba($color: $bgColor, $alpha: 0.95);
 			z-index: 30;
 			top: 0;
