--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -402,12 +402,15 @@ body {
 		@media (max-width: $sp-width) {
 			position: fixed;
 			margin: 0;
-			width: calc(100dvw - 12rem);
-			height: 100%;
+			width: calc(100vw - 12rem);
+			height: auto;
+			max-height: 100vh;
+			max-height: 100dvh;
+			overflow: scroll;
 			background-color: rgba($color: $bgColor, $alpha: 0.95);
 			z-index: 30;
 			top: 0;
-			right: -100dvw;
+			right: -100vw;
 			transition: right 0.5s ease-in-out;
 			.open + & {
 				right: 0;
@@ -420,7 +423,7 @@ body {
 			height: 100%;
 			@media (max-width: $sp-width) {
 				display: block;
-				padding-top: 5rem;
+				padding: 5rem 0;
 			}
 			.hasmenu {
 				position: relative;
