--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -403,15 +403,14 @@ body {
 			position: fixed;
 			margin: 0;
 			width: calc(100vw - 12rem);
-			height: auto;
-			max-height: 100vh;
-			max-height: 100dvh;
+			height: 100vh;
+			height: 100lvh;
 			overflow: scroll;
 			background-color: rgba($color: $bgColor, $alpha: 0.95);
 			z-index: 30;
 			top: 0;
 			right: -100vw;
-			transition: right 0.5s ease-in-out;
+			transition: right 0.5s ease-in-out, height 0.1s ease;
 			.open + & {
 				right: 0;
 				box-shadow: 0 0 2rem rgba($color: #48423b, $alpha: 0.15);
