--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -405,7 +405,6 @@ body {
 			width: calc(100vw - 12rem);
 			height: 100vh;
 			height: 100lvh;
-			overflow: scroll;
 			background-color: rgba($color: $bgColor, $alpha: 0.95);
 			z-index: 30;
 			top: 0;
@@ -423,29 +422,35 @@ body {
 			@media (max-width: $sp-width) {
 				display: block;
 				padding: 5rem 0;
+				overflow: scroll;
+			}
+			& > li {
+				position: relative;
 			}
 			.hasmenu {
-				position: relative;
-				&:hover {
-					@media (min-width: $pc-width) {
-						.header__nav-sublist {
-							height: 120px;
-							border: 1px solid rgba($color: #48423b, $alpha: 0.2);
-							border-top: none;
-						}
-					}
-				}
 				@media (max-width: $sp-width) {
-					margin-bottom: 2rem;
+					margin-bottom: 1rem;
 					&::after {
 						display: block;
 						content: "";
 						width: calc(100% - 6rem);
 						height: 1px;
-						background-color: rgba($color: $textColor, $alpha: 0.2);
+						background-color: rgba($color: $textColor, $alpha: 0.1);
 						position: absolute;
 						left: 3rem;
-						bottom: -1.2rem;
+						bottom: 0;
+					}
+				}
+				&:hover {
+					@media (min-width: $pc-width) {
+						.header__nav-sublist {
+							height: calc(40px * 3);
+							border: 1px solid rgba($color: #48423b, $alpha: 0.2);
+							border-top: none;
+						}
+						.header__nav-booklist {
+							height: calc(35px * 9);
+						}
 					}
 				}
 			}
@@ -454,14 +459,20 @@ body {
 			font-size: 0.9em;
 			@media (min-width: $pc-width) {
 				position: absolute;
-				width: 100%;
+				width: auto;
+				min-width: 100%;
 				height: 0px;
 				overflow: hidden;
 				background-color: $bgColor;
 				transition: height 0.4s ease;	
 			}
+			@media (max-width: $sp-width) {
+				padding-bottom: 1rem;
+				opacity: 0.8;
+			}
 			a {
 				display: block;
+				white-space: nowrap;
 				width: 100%;
 				height: 40px;
 				border-bottom: none;
@@ -471,6 +482,17 @@ body {
 					height: auto;
 					padding: 0.5rem calc(3rem + 1em);
 					margin-top: -0.5rem;
+				}
+			}
+			&.header__nav-booklist {
+				a {
+					height: 35px;
+					font-size: 0.8em;
+					@media (max-width: $sp-width) {
+						height: auto;
+						padding-top: 0.8rem;
+						padding-bottom: 0.8rem;
+					}
 				}
 			}
 		}
