--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -507,6 +507,7 @@ body {
 				background-color: rgba($color: $keyColor, $alpha: 0.2);
 			}
 			@media (max-width: $sp-width) {
+				color: $keyColor;
 				display: block;
 				padding: 0.8rem 3rem;
 			}
@@ -713,8 +714,18 @@ body {
 			color: $keyColorDark;
 			span {
 				line-height: 1;
+				position: relative;
 				@media (max-width: $sp-width) {
-					border-bottom: 1px solid rgba($color: $keyColorDark, $alpha: 0.3);
+					&::after {
+						position: absolute;
+						width: 100%;
+						height: 1px;
+						content: "";
+						display: block;
+						background-color: rgba($color: $keyColorDark, $alpha: 0.3);
+						left: 0;
+						bottom: 1px;	
+					}
 				}	
 			}
 		}
