--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -885,6 +885,12 @@ body {
 	&__label {
 		display: block;
 		margin-bottom: 1.5rem;
+		&-inline {
+			display: inline-flex;
+			align-items: center;
+			column-gap: 1rem;
+			margin-bottom: 1.5rem;
+		}
 		&-txt {
 			font-size: 1.3rem;
 			display: block;
@@ -893,7 +899,7 @@ body {
 	.btn {
 		margin-bottom: 1.5rem;
 	}
-	input, select, textarea {
+	input:not([type="checkbox"]), select, textarea {
 		width: 100%;
 		background-color: transparent;
 		box-shadow: none;
@@ -902,13 +908,19 @@ body {
 			font-size: 1.6rem;
 		}
 	}
-	input, select {
+	input:not([type="checkbox"]), select {
 		min-height: 3rem;
 		padding: 0.5rem 1rem;
+	}
+	input[type="checkbox"] {
+		background-color: transparent;
+		box-shadow: none;
+		border: 1px solid $keyColorDark;
 	}
 	textarea {
 		height: 10em;
 		padding: 1rem;
+		display: block;
 	}
 }
 
