Web拍手実装のテスト

--- a/_includes/layout-novel_bride.liquid
+++ b/_includes/layout-novel_bride.liquid
@@ -45,3 +45,15 @@ template: novelPage
     <a href="/book/bride/">『竜の花嫁』詳細ページへ</a>
   </div>
 </article>
+
+<div id="contact">
+  <form name="clap" class="form" method="POST" action="/contact/thanks" netlify>
+  <label class="form__label">
+      <span class="form__label-txt">テスト</span>
+      <input name="message" type="text" value="{{ title }}">
+    </label>
+    <div>
+      <button class="btn btn--medium btn--color" type="submit">メッセージを送る</button>
+    </div>
+  </form>
+</div>
