--- a/_includes/layout-novel.liquid
+++ b/_includes/layout-novel.liquid
@@ -28,5 +28,14 @@ template: novelPage
       <p>投稿元：即興小説トレーニング（サービス終了に伴いリンク切れ）<br>お題「{{improvise_theme}}」を元に執筆・改稿</p>
     {%- endif -%}
     <a href="/novel/">小説一覧へ戻る</a>
+    <hr>
+    <div id="contact" class="novel__form">
+      <form name="clap" class="form" method="POST" action="/contact/thanks" netlify>
+        <input name="message" type="text" value="{{ title }}" class="visually-hidden">
+        <div>
+          <button class="btn btn--small btn--pale" type="submit">WebClap</button>
+        </div>
+      </form>
+    </div>
   </div>
 </article>
