--- a/_includes/layout-novel_bride.liquid
+++ b/_includes/layout-novel_bride.liquid
@@ -43,17 +43,14 @@ template: novelPage
   <div class="novel__footer">
     <hr>
     <a href="/book/bride/">『竜の花嫁』詳細ページへ</a>
+    <hr>
+    <div id="contact" class="novel__form">
+      <form name="clap" class="form" method="POST" action="/contact/thanks" netlify>
+        <input name="message" type="text" value="{{ title }}" class="visually-hidden">
+        <div>
+          <button class="btn btn--small btn--pale" type="submit">WebClap</button>
+        </div>
+      </form>
+    </div>
   </div>
 </article>
-
-<div id="contact">
-  <form name="clap" class="form" method="POST" action="/contact/thanks" netlify>
-  <label class="form__label">
-      <span class="form__label-txt">テスト</span>
-      <input name="message" type="text" value="{{ title }}">
-    </label>
-    <div>
-      <button class="btn btn--medium btn--color" type="submit">メッセージを送る</button>
-    </div>
-  </form>
-</div>
