--- a/_includes/snippet-article-list.liquid
+++ b/_includes/snippet-article-list.liquid
@@ -1,5 +1,7 @@
 <ul>
   {%- for article in collections.article -%}
-    <li><a href="{{ article.url }}">{{ article.url }}</a></li>
+    {%- if article.url != "/blog/" -%}
+      <li><a href="{{ article.url }}">{{ article.data.title }}</a></li>
+    {%- endif -%}
   {%- endfor -%}
 </ul>
