--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -64,8 +64,9 @@
               <a href="/about" class="menu-item--parent">infomation<span class="font-serif">活動情報</span></a>
               <ul class="header__nav-sublist">
                 <li><a href="/about">about<span class="font-serif">呼吸書房について</span></a></li>
-                <li><a href="/event">event<span class="font-serif">イベント出店情報</span></a></li>
+                <li><a href="/blog">blog<span class="font-serif">ブログ</span></a></li>
                 <li><a href="/contact">contact<span class="font-serif">お問合せ</span></a></li>
+                <li><a href="/event">event<span class="font-serif">イベント出店情報</span></a></li>
               </ul>
             </li>
             <li class="hasmenu">
@@ -98,8 +99,9 @@
           <ul class="footer__nav-list">
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/">home / トップページ</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/about">about / このサイトについて</a></li>
-            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/event">event / イベント出店情報</a></li>
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/blog">blog / ブログ</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/contact">contact / お問合せ・ご依頼など</a></li>
+            <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/event">event / イベント出店情報</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/about/privacy">privacy / プライバシーポリシー</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/book">book-list / 書籍情報</a></li>
             <li {% if page.url == post.url %} aria-current="page"{% endif %}><a href="/novel">web-novel / 小説を読む</a></li>
