--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -444,7 +444,7 @@ body {
 				&:hover {
 					@media (min-width: $pc-width) {
 						.header__nav-sublist {
-							height: calc(40px * 3);
+							height: calc(40px * 4);
 							border: 1px solid rgba($color: #48423b, $alpha: 0.2);
 							border-top: none;
 						}
@@ -549,7 +549,7 @@ body {
 		display: grid;
 		grid-auto-flow: column;
 		grid-template-columns: repeat(2, 1fr);
-		grid-template-rows: repeat(5, 1fr);
+		grid-template-rows: repeat(6, 1fr);
 		//gap: 0.6rem 1.8rem;
 		gap: 0.6rem 0;
 		font-size: 1.2rem;
@@ -1418,7 +1418,10 @@ body {
 }
 .blog-article {
 	border: 1px solid rgba($color: $keyColor, $alpha: 0.1);
-	padding-bottom: 1em;
+	@media (max-width: $sp-width) {
+		border: none;
+		//border-bottom: 5px solid rgba($color: $keyColor, $alpha: 0.1);
+	}
 	&:not(:last-child) {
 		margin-bottom: 4rem;
 	}
@@ -1428,26 +1431,42 @@ body {
 		justify-content: space-between;
 		padding: 1em;
 		@media (max-width: $sp-width) {
-			margin: 2rem 0;
+			//margin: 2rem 0;
+			display: block;
+			padding: 1em 0;
+			background-color: transparent;
+			border-top: 5px solid rgba($color: $keyColor, $alpha: 0.1);
+			border-bottom: 5px solid rgba($color: $keyColor, $alpha: 0.1);
 		}
 		&-title {
 			margin: 0;
 		}
+		&-time {
+			display: block;
+			text-align: right;
+		}
 	}
 	&__body {
 		padding: 2em 1em 1em 1em;
+		@media (max-width: $sp-width) {
+			padding: 1em 0;
+		}
 		letter-spacing: 0;
 		&-more {
 			margin-top: 2rem;
 			text-align: right;
 		}
 		h1, h2, h3, h4, h5, h6 {
-			font-weight: normal;
+			font-weight: bold;
 			font-size: 1em;
 			margin: 0;
 		}
 		h1 {
+			margin-top: 40px;
 			font-size: 1.1em;
+			padding-bottom: 5px;
+			margin-bottom: 1em;
+			border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.8);
 		}
 		h2 {
 			font-size: 1.1em;
@@ -1469,6 +1488,9 @@ body {
 		display: flex;
 		align-items: flex-end;
 		justify-content: space-between;
+		@media (max-width: $sp-width) {
+			padding: 1em 0;
+		}
 		&-category {
 			display: flex;
 			dt {
