ブログ更新＆サムネイル実装

--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -36,7 +36,11 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@feelingskyblue" />
     <meta name="twitter:description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}" />
-    <meta name="twitter:image:src" content="https://kokyushobo.com/assets/img/ogp.png" />
+    {% if thumbnail != blank -%}
+      <meta name="twitter:image:src" content="https://kokyushobo.com{{ thumbnail }}" />
+    {%- else -%}
+      <meta name="twitter:image:src" content="https://kokyushobo.com/assets/img/ogp.png" />
+    {%- endif %}
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-08Z4HYPJRN"></script>
