--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -60,17 +60,35 @@ pagination:
   {%- endif -%}
 {%- endfor -%}
 
-{%- comment -%}
 <nav class="breadcrumb__wrapper">
   <ol class="breadcrumb">
-    <li>{% if page.url != pagination.href.first %}<a href="{{ pagination.href.first }}">⟪</a>{% else %}⟪{% endif %}</li>
-    <li>{% if pagination.href.previous %}<a href="{{ pagination.href.previous }}">⟨</a>{% else %}⟨{% endif %}</li>
+    <li>
+      {% if page.url != pagination.href.first %}
+        <a href="{{ pagination.href.first }}">⟪</a>
+      {% else %}⟪{% endif %}
+    </li>
+    <li>
+      {% if pagination.href.previous %}
+        <a href="{{ pagination.href.previous }}">⟨</a>
+      {% else %}⟨{% endif %}
+    </li>
     {%- for pageEntry in pagination.pages %}
-      <li><a href="{{ pagination.hrefs[ forloop.index0 ] }}"{% if page.url == pagination.hrefs[ forloop.index0 ] %} aria-current="page"{% endif %}>{{ forloop.index }}</a></li>
+      <li>
+        <a href="{{ pagination.hrefs[ forloop.index0 ] }}"{% if page.url == pagination.hrefs[ forloop.index0 ] %} aria-current="page"{% endif %}>
+          {{ forloop.index }}
+        </a>
+      </li>
     {%- endfor %}
-    <li>{% if pagination.href.next %}<a href="{{ pagination.href.next }}">⟩</a>{% else %}⟩{% endif %}</li>
-    <li>{% if page.url != pagination.href.last %}<a href="{{ pagination.href.last }}">⟫</a>{% else %}⟫{% endif %}</li>
+    <li>
+      {% if pagination.href.next %}
+        <a href="{{ pagination.href.next }}">⟩</a>
+        {% else %}⟩{% endif %}
+    </li>
+    <li>
+      {% if page.url != pagination.href.last %}
+        <a href="{{ pagination.href.last }}">⟫</a>
+      {% else %}⟫{% endif %}
+    </li>
   </ol>
 </nav>
 </div>
-{%- endcomment -%}
