--- a/blog/index.liquid
+++ b/blog/index.liquid
@@ -17,14 +17,14 @@ pagination:
   {%- if article.url != "/blog/" -%}
     <article class="blog-article">
       <header class="blog-article__header bg__secondary">
-        <h2 class="heading--secondary  blog-article__header-title">{{ article.data.title }}</h2>
+        <h2 class="heading--secondary  blog-article__header-title"><a href="{{ article.url }}" >{{ article.data.title }}</a></h2>
         <time class="blog-article__header-time" datatime="{{ article.date | date: '%Y-%m-%d' }}">{{ article.date | date: "%Y.%m.%d %a" }}</time>
       </header>
       <div class="blog-article__body">
         {%- if article.data.thumbnail != blank -%}
-          <div class="blog-article__thumbnail">
+          <a href="{{ article.url }}" class="blog-article__thumbnail">
             <img src="{{ article.data.thumbnail }}" alt="{{ article.data.title }}" loading="lazy" width="800" class="">
-          </div>
+          </a>
         {%- endif -%}
         {%- assign introduction = article.content | truncate: 300 -%}
         <div>
@@ -36,7 +36,7 @@ pagination:
         </div>
       </div>
       <footer class="blog-article__footer">
-        <a href="{{ article.url }}" class="btn btn--medium btn--pale">記事を読む</a>
+        <a href="{{ article.url }}" class="btn btn--medium btn--pale blog-article__read-btn">記事を読む</a>
         {%- comment -%}
         <dl class="blog-article__footer-category">
           <dt>Category</dt>
@@ -60,35 +60,48 @@ pagination:
   {%- endif -%}
 {%- endfor -%}
 
-<nav class="breadcrumb__wrapper">
-  <ol class="breadcrumb">
-    <li>
+<nav class="pagination__wrapper">
+  <ol class="pagination">
+    {% comment %}
+    今はいらない　ページ増えたら出す
+    <li class="pagination__item {% if page.url == pagination.href.first %}is-transparent{% endif %}">
       {% if page.url != pagination.href.first %}
-        <a href="{{ pagination.href.first }}">⟪</a>
-      {% else %}⟪{% endif %}
+        <a href="{{ pagination.href.first }}" class="pagination__inner">⟪</a>
+      {% else %}
+        <span class="pagination__inner">⟪</span>
+      {% endif %}
     </li>
-    <li>
+    {% endcomment %}
+    <li class="pagination__item {% unless pagination.href.previous %}is-transparent{% endunless %}">
       {% if pagination.href.previous %}
-        <a href="{{ pagination.href.previous }}">⟨</a>
-      {% else %}⟨{% endif %}
+        <a class="pagination__inner" href="{{ pagination.href.previous }}">⟨</a>
+      {% else %}
+        <span class="pagination__inner">⟨</span>
+      {% endif %}
     </li>
     {%- for pageEntry in pagination.pages %}
-      <li>
-        <a href="{{ pagination.hrefs[ forloop.index0 ] }}"{% if page.url == pagination.hrefs[ forloop.index0 ] %} aria-current="page"{% endif %}>
+      <li class="pagination__item">
+        <a class="pagination__inner" href="{{ pagination.hrefs[ forloop.index0 ] }}"{% if page.url == pagination.hrefs[ forloop.index0 ] %} aria-current="page"{% endif %}>
           {{ forloop.index }}
         </a>
       </li>
     {%- endfor %}
-    <li>
+    <li class="pagination__item {% unless pagination.href.next %}is-transparent{% endunless %}">
       {% if pagination.href.next %}
-        <a href="{{ pagination.href.next }}">⟩</a>
-        {% else %}⟩{% endif %}
+        <a class="pagination__inner" href="{{ pagination.href.next }}">⟩</a>
+      {% else %}
+        <span class="pagination__inner" class="pagination__inner">⟩</span>
+      {% endif %}
     </li>
-    <li>
+    {% comment %}
+    <li class="pagination__item {% if page.url == pagination.href.last %}is-transparent{% endif %}">
       {% if page.url != pagination.href.last %}
-        <a href="{{ pagination.href.last }}">⟫</a>
-      {% else %}⟫{% endif %}
+        <a class="pagination__inner" href="{{ pagination.href.last }}">⟫</a>
+      {% else %}
+        <span class="pagination__inner">⟫</span>
+      {% endif %}
     </li>
+    {% endcomment %}
   </ol>
 </nav>
 </div>
