--- a/_includes/layout.liquid
+++ b/_includes/layout.liquid
@@ -9,6 +9,7 @@
     <meta name="author" content="風野 湊">
     <meta name="description" content="{%- if description == blank -%}風野湊によるオリジナル創作ウェブサイトです。小説と紀行文、朗読をメインに掲載しています。書籍通販・イベント出店の案内もこちらからどうぞ。{%- else -%}{{ description }}{%- endif -%}">
     <meta name="format-detection" content="telephone=no, email=no, address=no">
+    {%- if canonical -%}<link rel="canonical" href="{{ canonical }}" />{%- endif %}
 
     <!-- Assets -->
     <link rel="stylesheet" href="/assets/css/style.css">
