--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1501,12 +1501,34 @@ body {
 			margin-bottom: 1em;
 			border-bottom: 1px solid rgba($color: $keyColor, $alpha: 0.8);
 		}
+		h4 {
+			font-size: 1em;
+			margin-top: 40px;
+			margin-bottom: 1em;
+			position: relative;
+			display: flex;
+			align-items: center;
+			&::after {
+				content: "";
+				margin-left: 1em;
+				display: block;
+				flex: 1;
+				width: 100%;
+				height: 1px;
+				background-color: rgba($color: $keyColor, $alpha: 0.25);
+			}
+		}
 		hr {
 			margin-top: 4em;
 			margin-bottom: 4em;
 		}
 		p {
-			
+			&:not(:first-child) {
+				margin-top: 1.5em;
+			}
+		}
+		img:not(:last-child) {
+			margin-bottom: 1.5em;
 		}
 		ul {
 			li {
