--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1522,6 +1522,11 @@ body {
 			margin-top: 4em;
 			margin-bottom: 4em;
 		}
+		iframe {
+			width: 100%;
+			height: auto;
+			aspect-ratio: 16/9;
+		}
 		p {
 			&:not(:first-child) {
 				margin-top: 1.5em;
