--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -270,6 +270,17 @@
           </ul>
         </a>
       </article>
+      <article class="novel-list__item">
+        <a href="https://atsea.day/blogs/journal/novel_04" target="_blank" rel="noopenner noreferrer" class="unstyle novel-list__item-link" >
+          <h4 class="novel-list__item-title"><span class="font-serif">またたくヴェールの海で</span></h4>
+          <span class="novel-list__catchcopy">うつくしい珊瑚海を照らしていた月に、ひとつの椰子の実が物語をせがみました。</span>
+          <ul class="novel-category">
+            <li>童話</li>
+            <li>幻想</li>
+            <li>写真寄稿</li>
+          </ul>
+        </a>
+      </article>
     </div>
   </section>
 
