--- a/_includes/info-postcard-6.liquid
+++ b/_includes/info-postcard-6.liquid
@@ -1,8 +1,7 @@
-<p>【個人連載雑誌 / 第6号 / A5 / オンデマンドフルカラー表紙 / 62ページ / 小部数・再版予定なし】</p>
+<p>【個人連載雑誌 / 第6号 / A5 / オンデマンドフルカラー表紙 / 62ページ / 小部数・再版予定なし】<br>※本書籍は販売を終了しました。完売に伴い掲載小説の本文を公開しています</p>
 <p>『walking postcard』は、呼吸書房が2018年11月から発行している小さな雑誌です。<br>書き手はひとまず私ひとり。<br>一冊の本にまとまる前の、小説や旅行記、短編や掌編、散文、詩、独り言などなどを、<br class="hidden-phone">旅先から送る便りのように、気の向くままに、自由に、お届けできたらと思っています。</p>
 <ul class="list__flex">
-  <li><a href="/book/trees_light/vacation" class="btn btn--medium btn--color">試し読み（10000字）</a></li>
-  <li><a href="https://kokyushobo.booth.pm/items/4314220" target="_blank" rel="noopenner noreferrer" class="btn btn--medium btn--color">書籍通販：BOOTH（外部サイトへ）</a></li>
+  <li><a href="/book/trees_light/vacation" class="btn btn--medium btn--color">本文公開中</a></li>
 </ul>
 <hr>
 <section>
