--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -20,6 +20,8 @@
     <header class="novel-list__header">
       <h3 class="novel-list__title font-serif">すべての樹木は光：試し読み</h3>
       <p class="novel-list__description">熱帯雨林の樹木変身譚『すべての樹木は光』より、冒頭の約4万字をWeb上で公開しています。<br>本編は書籍の形で完結済みです。およそ3分の一地点、物語のターニングポイントまでをお読みいただけます。</p>
+      <br>
+      <p class="novel-list__description">2024.11.28 後日談「樹木のバカンス」を公開しました。</p>
       <a href="/book/trees_light" class="btn btn--small btn--pale"><span>書籍紹介へ</span></a>
     </header>
     <div class="list novel-list">
@@ -53,11 +55,17 @@
           <span class="novel-list__catchcopy">ユハはこの家が好きだった。母の帰りを一人待ち続ける、狭く寂しい首都の家よりも、ずっと。</span>
         </div>
       </article>
-            <article class="novel-list__item">
+      <article class="novel-list__item">
         <div class="novel-list__item-unlink">
           <h4 class="novel-list__item-title"><span class="font-serif">樹木たちは語る<small class="op_7">（書籍収録）</small></span></h4>
           <span class="novel-list__catchcopy">そのようにして、魔法は失われた。</span>
         </div>
+      </article>
+      <article class="novel-list__item">
+        <a href="/book/trees_light/vacation" class="unstyle novel-list__item-link">
+          <h4 class="novel-list__item-title"><span class="font-serif">樹木のバカンス<small class="op_7">（30年後の後日談）</small></span></h4>
+          <span class="novel-list__catchcopy">ベンチに樹木が座っている。もちろんそんなはずはない。</span>
+        </a>
       </article>
     </div>
   </section>
