SNSリンク追加

--- a/_includes/snipet-sns-list.liquid
+++ b/_includes/snipet-sns-list.liquid
@@ -1,7 +1,7 @@
 <ul class="list__sns">
   <li><a href="https://twitter.com/feelingskyblue" target="_blank" rel="noopenner noreferrer">Twitter</a></li>
   <li><a href="https://misskey.design/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.design)</a></li>
-  <li><a href="https://misskey.cloud/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.cloud)</a></li>
+  <li><a href="https://bsky.app/profile/feelingskyblue.bsky.social" target="_blank" rel="noopenner noreferrer">Bluesky</a></li>
   <li><a href="https://novelskey.tarbin.net/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Misskey(.novelskey)</a></li>
   <li><a href="https://skeb.jp/@feelingskyblue" target="_blank" rel="noopenner noreferrer">Skeb</a></li>
   <li><a href="https://feelingskyblue.fanbox.cc/" target="_blank" rel="noopenner noreferrer">pixiv FANBOX</a></li>
