イベント情報更新

--- a/_includes/info-tree-shade.liquid
+++ b/_includes/info-tree-shade.liquid
@@ -6,3 +6,4 @@
 </p>
 <p>◇　◆　◇</p>
 <p>2025年刊行予定、『すべての樹木は光』続編となります。<br>本編から127年後のどこかの未来、魔法が解けた後のユハをめぐる物語です。</p>
+<p>刊行までの間、<a href="/blog">ブログ</a>にて進捗状況を毎月更新しています。</p>
