JS最適化の途中

--- a/_includes/snippet-firstview-item.liquid
+++ b/_includes/snippet-firstview-item.liquid
@@ -30,7 +30,7 @@
   <div class="home__firstview-image__txt font-serif-jp page-width">
     <p>枯れ葉に覆われた林床の小道は先へ進むほどに細くなり、曲がりくねり、薄暗くなっていった。日光を奪いあうように樹木たちは巨大化し、はるか頭上の樹冠からこぼれる千々の光は無数の銀河を抱く虚空のようにも見えた。足元から樹冠へ至るまでの長大な距離にあらゆる緑が氾濫している。</p>
     <div class="home__firstview-morelink">
-      <a href="/book/postcard_6/">「樹木のバカンス」<span>詳細ページへ</span></a>
+      <a href="/book/trees_light/vacation/">「樹木のバカンス」<span>本編へ</span></a>
     </div>
   </div>
 </div>
