寄稿小説追加

--- a/_includes/section-novels.liquid
+++ b/_includes/section-novels.liquid
@@ -289,6 +289,17 @@
           </ul>
         </a>
       </article>
+      <article class="novel-list__item">
+        <a href="https://atsea.day/blogs/journal/novel_05" target="_blank" rel="noopenner noreferrer" class="unstyle novel-list__item-link" >
+          <h4 class="novel-list__item-title"><span class="font-serif">波とランプシェード</span></h4>
+          <span class="novel-list__catchcopy">身支度を整え、上着を羽織り、さて雨戸を開けようと外に出ると、軒先に女が佇んでいた。</span>
+          <ul class="novel-category">
+            <li>怪奇</li>
+            <li>幻想</li>
+            <li>写真寄稿</li>
+          </ul>
+        </a>
+      </article>
     </div>
   </section>
 
